--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
               </p>
             </li>
             <li class="adv-element clock">
-              <a href="" class="link"
-                ><svg width="70" height="70">
-                  <use href="./images/sprite.svg#icon-clock_1"></use></svg
-              ></a>
+              <div class="link">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#icon-clock_1"></use></svg>
+              </div>
               <!-- <img src="./images/clock_1.svg" alt="часы" /> -->
               <h3 class="feature">Пунктуальность</h3>
               <p class="feature-text">
@@ -91,10 +91,10 @@
               </p>
             </li>
             <li class="adv-element diagram">
-              <a href="" class="link"
-                ><svg width="70" height="70">
-                  <use href="./images/sprite.svg#icon-diagram_1"></use></svg
-              ></a>
+              <div class="link">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#icon-diagram_1"></use></svg>
+                </div>
               <!-- <img src="./images/diagram_1.svg" alt="диаграма" /> -->
               <h3 class="feature">Планирование</h3>
               <p class="feature-text">
@@ -103,10 +103,10 @@
               </p>
             </li>
             <li class="adv-element astronaut">
-              <a href="" class="link"
-                ><svg width="70" height="70">
-                  <use href="./images/sprite.svg#icon-astronaut_1"></use></svg
-              ></a>
+              <div class="link">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#icon-astronaut_1"></use></svg>
+                </div>
               <!-- <img src="./images/astronaut_1.svg" alt="астронавт" /> -->
               <h3 class="feature">Современные технологии</h3>
               <p class="feature-text">
@@ -128,8 +128,8 @@
                   alt="десктоп"
                   width="370"
                   height="294"
-              /></a>
-              <p class="box">Десктопные приложения</p>
+              />
+              <p class="box">Десктопные приложения</p></a>
             </li>
             <li class="box-element">
               <a href=""
@@ -138,8 +138,8 @@
                   alt="мобильний"
                   width="370"
                   height="294"
-              /></a>
-              <p class="box">Мобильные приложения</p>
+              />
+              <p class="box">Мобильные приложения</p></a>
             </li>
             <li class="box-element">
               <a href=""
@@ -148,8 +148,8 @@
                   alt="дизайн"
                   width="370"
                   height="294"
-              /></a>
-              <p class="box">Дизайнерские решения</p>
+              />
+              <p class="box">Дизайнерские решения</p></a>
             </li>
           </ul>
         </div>
